--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include 'java:quantserver:pub', 'java:quantserver:snmpagent',  'java:quantserver:web',
 		'java:timebase:api', 'java:timebase:client', 'java:timebase:server', 'java:timebase:web', 'java:timebase:pub', 'java:timebase:aerondirect',
-		'java:timebase:jdbc', 'java:timebase:s3', 'java:timebase:parquet', 'java:timebase:test',
+		'java:timebase:jdbc', 'java:timebase:s3', 'java:timebase:parquet', 'java:timebase:test'
